maint - fixed services-header alignment to stop moving away from ul when going through responsive screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,7 +184,7 @@ ul li {
 }
 
 #services-header {
-    text-align: center;
+    text-align: left;
     margin-bottom: 10px;
     font-family: 'Patrick Hand', sans-serif;
     letter-spacing: 2px;
